// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  user_id    String   @id @default(uuid())
  name       String?
  email      String?  @unique
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  trips      Trip[]   @relation("StarterTrips")
  participants TripParticipant[]
}

model Destination {
  destination_id String @id @default(uuid())
  name    String
  country String?
  image   String?
  tripOptions TripDestinationOption[]
}

model Trip {
  trip_id    String   @id @default(uuid())
  trip_name  String?
  code       String   @unique
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt
  starter    User     @relation("StarterTrips", fields: [starter_id], references: [user_id])
  starter_id String
  locationOptions TripDestinationOption[]
  participants TripParticipant[]
}

model TripDestinationOption {
  id             String   @id @default(uuid())
  trip           Trip     @relation(fields: [trip_id], references: [trip_id], onDelete: Cascade)
  trip_id        String
  destination    Destination @relation(fields: [destination_id], references: [destination_id])
  destination_id String
  votes          DestinationVote[]

  @@unique([trip_id, destination_id])
}

model TripParticipant {
  participant_id String @id @default(uuid())
  trip           Trip   @relation(fields: [trip_id], references: [trip_id], onDelete: Cascade)
  trip_id        String
  user           User   @relation(fields: [user_id], references: [user_id])
  user_id        String
  max_cost       Float?
  votes          DestinationVote[]
  availabilities Availability[]

  @@unique([trip_id, user_id])
}

model DestinationVote {
  id                  String              @id @default(uuid())
  participant         TripParticipant     @relation(fields: [participant_id], references: [participant_id], onDelete: Cascade)
  participant_id      String
  trip_destination    TripDestinationOption @relation(fields: [trip_destination_id], references: [id], onDelete: Cascade)
  trip_destination_id String

  @@unique([participant_id, trip_destination_id])
  @@index([trip_destination_id])
}

model Availability {
  id             String   @id @default(uuid())
  participant    TripParticipant @relation(fields: [participant_id], references: [participant_id], onDelete: Cascade)
  participant_id String
  start_date     DateTime
  end_date       DateTime

  @@index([participant_id])
}